feat: banner basic

--- a/src/app/website/components/common/navbar/navbar.component.html
+++ b/src/app/website/components/common/navbar/navbar.component.html
@@ -5,8 +5,7 @@
     </div>
     <div class="options">
       <menu>
-        <li><a routerLink="boys" routerLinkActive="active">Niños</a></li>
-        <li><a routerLink="" routerLinkActive="active">Niñas</a></li>
+        <li><a routerLink="clothes" routerLinkActive="active">Prendas</a></li>
         <li>
           <a routerLink="accesories" routerLinkActive="active">Accesorios</a>
         </li>
@@ -23,8 +22,7 @@
     </div>
     <div class="options" [class.inactive]="!isActive">
       <menu>
-        <li><a routerLink="boys" routerLinkActive="active">Niños</a></li>
-        <li><a routerLink="" routerLinkActive="active">Niñas</a></li>
+        <li><a routerLink="clothes" routerLinkActive="active">Prendas</a></li>
         <li>
           <a routerLink="accesories" routerLinkActive="active">Accesorios</a>
         </li>
