--- a/src/app/website/components/common/navbar/navbar.component.scss
+++ b/src/app/website/components/common/navbar/navbar.component.scss
@@ -1,7 +1,6 @@
 .navbar {
   left: 0;
   right: 0;
-  background-color: #ffeee5;
 
   .navbar-collapse {
     display: none;
@@ -88,7 +87,7 @@
 
       .options {
         animation: slide-in 1s ease;
-        background-color: #ffeee5;
+        background-color: #FFF4EE;
         position: absolute;
         display: flex;
         flex-direction: column;
