--- a/src/app/website/components/common/footer/footer.component.html
+++ b/src/app/website/components/common/footer/footer.component.html
@@ -1,1 +1,21 @@
-<p>footer works!</p>
+<footer>
+  <div class="top">
+    <div></div>
+    <div class="logo">
+      <a href=""><h2>Manzanita</h2></a>
+    </div>
+  </div>
+  <div class="info">
+    <menu>
+      <li><h3>Términos y Condiciones</h3></li>
+      <li><a href="">Políticas de envío</a></li>
+      <li><a href="">Preguntas frecuentes</a></li>
+    </menu>
+    <ul>
+      <li><h3>Contáctanos</h3></li>
+      <li>Contacto: 1231231212</li>
+      <li>manzanita página</li>
+      <li>manzanita página</li>
+    </ul>
+  </div>
+</footer>
