--- a/src/app/website/pages/products/products.component.html
+++ b/src/app/website/pages/products/products.component.html
@@ -1,3 +1,7 @@
 <app-layout>
-  <p>products works!</p>
+  <app-products-categories />
+  <div>
+    <app-products-sizing />
+    <app-products-container />
+  </div>
 </app-layout>
