--- a/src/app/website/pages/products/products.component.html
+++ b/src/app/website/pages/products/products.component.html
@@ -1,5 +1,5 @@
 <app-layout>
-  <app-products-categories />
+  <app-products-categories [(currentCategory)]="currentCategory" />
   <div>
     <app-products-sizing />
     <app-products-container />
