feat: filter by color

--- a/src/app/website/components/common/navbar/navbar.component.html
+++ b/src/app/website/components/common/navbar/navbar.component.html
@@ -22,9 +22,9 @@
     </div>
     <div class="options" [class.inactive]="!isActive">
       <menu>
-        <li><a routerLink="clothes" routerLinkActive="active">Prendas</a></li>
+        <li><a routerLink="/clothes" routerLinkActive="active">Prendas</a></li>
         <li>
-          <a routerLink="accesories" routerLinkActive="active">Accesorios</a>
+          <a routerLink="/accesories" routerLinkActive="active">Accesorios</a>
         </li>
       </menu>
       <div class="cart">
