--- a/src/app/website/components/products/categories/categories.component.html
+++ b/src/app/website/components/products/categories/categories.component.html
@@ -8,7 +8,7 @@
       <span *ngIf="currentCategory === category.id" (click)="setFilter('')"
         >X</span
       >
-      <div>
+      <div (click)="setFilter(category.id)">
         <button type="button">{{ category.name | uppercase }}</button>
       </div>
       <img
