--- a/src/app/website/pages/products/products.component.html
+++ b/src/app/website/pages/products/products.component.html
@@ -1,7 +1,7 @@
 <app-layout>
   <app-products-categories [(currentCategory)]="currentCategory" />
-  <div>
-    <app-products-sizing />
+  <div class="main-container">
+    <app-products-filters [avalaibleColors]="avalaibleColors"  [(currentColor)]="currentColor"/>
     <app-products-container />
   </div>
 </app-layout>
