--- a/src/app/website/components/common/footer/footer.component.html
+++ b/src/app/website/components/common/footer/footer.component.html
@@ -18,4 +18,7 @@
       <li>manzanita página</li>
     </ul>
   </div>
+  <div class="bottom">
+    <span>Powered by jeva2002</span>
+  </div>
 </footer>
