--- a/src/app/website/components/common/footer/footer.component.scss
+++ b/src/app/website/components/common/footer/footer.component.scss
@@ -21,7 +21,7 @@ footer {
   }
 
   .info {
-    padding: 32px 120px;
+    padding: 40px 120px;
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
@@ -49,6 +49,18 @@ footer {
           text-decoration: underline;
         }
       }
+    }
+  }
+
+  .bottom {
+    border-top: 2px solid #efefef;
+    padding: 10px 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    span {
+      color: #b99a88;
     }
   }
 }
