--- a/src/app/website/components/products/categories/categories.component.scss
+++ b/src/app/website/components/products/categories/categories.component.scss
@@ -13,7 +13,8 @@ header {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    font-size: 150%;
+    background-color: transparent;
+    font-size: 200%;
     border: none;
     cursor: pointer;
   }
@@ -26,7 +27,8 @@ header {
     justify-content: center;
     list-style-type: none;
     gap: 10px;
-    width: 60%;
+    width: fit-content;
+    max-width: 60%;
     height: 150px;
     overflow: hidden;
 
@@ -49,6 +51,7 @@ header {
         justify-content: center;
 
         button {
+          cursor: pointer;
           background: transparent;
           z-index: 10;
           color: #fff;
