--- a/src/app/website/pages/products/products.component.html
+++ b/src/app/website/pages/products/products.component.html
@@ -1,7 +1,7 @@
 <app-layout>
-  <app-products-categories [(currentCategory)]="currentCategory" />
+  <app-products-categories />
   <div class="main-container">
-    <app-products-filters [avalaibleColors]="avalaibleColors"  [(currentColor)]="currentColor"/>
-    <app-products-container />
+    <app-products-filters [avalaibleColors]="avalaibleColors" />
+    <app-products-container [products]="products" />
   </div>
 </app-layout>
