--- a/src/app/website/pages/products/products.component.scss
+++ b/src/app/website/pages/products/products.component.scss
@@ -9,6 +9,6 @@
 @media (max-width: 750px) {
   .main-container {
     grid-template-columns: 1fr;
-    grid-auto-rows: 1fr;
+    grid-auto-rows: auto;
   }
 }
