feat: custom currency pipe

--- a/src/app/website/components/common/footer/footer.component.html
+++ b/src/app/website/components/common/footer/footer.component.html
@@ -11,7 +11,7 @@
       <li><a href="">Políticas de envío</a></li>
       <li><a href="">Preguntas frecuentes</a></li>
     </menu>
-    <ul>
+    <ul class="contact">
       <li><h3>Contáctanos</h3></li>
       <li>Contacto: 1231231212</li>
       <li>manzanita página</li>
