--- a/src/app/website/components/products/product-miniature/product-miniature.component.scss
+++ b/src/app/website/components/products/product-miniature/product-miniature.component.scss
@@ -1,26 +1,28 @@
 .miniature {
+  margin-top: 16px;
   max-height: 500px;
   max-width: 300px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  resize: both;
+  cursor: pointer;
 
   img {
     width: 100%;
-    height: 80%;
+    height: 400px;
+    background-size: contain;
   }
 
   div {
     display: flex;
     flex-direction: column;
+    height: 20%;
 
     span {
       font-size: 16px;
       font-weight: 200;
     }
   }
-
 }
 
 @media (max-width: 850px) {
