feat: context and product detail

--- a/src/app/website/pages/products/products.component.html
+++ b/src/app/website/pages/products/products.component.html
@@ -2,6 +2,6 @@
   <app-products-categories />
   <div class="main-container">
     <app-products-filters [avalaibleColors]="avalaibleColors" />
-    <app-products-container [products]="products" />
+    <app-products-container [products]="products$ | async" />
   </div>
 </app-layout>
