--- a/src/app/website/components/products/product-miniature/product-miniature.component.scss
+++ b/src/app/website/components/products/product-miniature/product-miniature.component.scss
@@ -17,6 +17,12 @@
     display: flex;
     flex-direction: column;
     height: 20%;
+    margin-bottom: 4px;
+    margin-left: 6px;
+
+    .name {
+      margin-top: 12px;
+    }
 
     span {
       font-size: 16px;
