--- a/src/app/website/components/products/products-container/products-container.component.scss
+++ b/src/app/website/components/products/products-container/products-container.component.scss
@@ -5,6 +5,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 20px;
 
   .container {
     list-style: none;
