--- a/src/app/website/pages/products/products.component.html
+++ b/src/app/website/pages/products/products.component.html
@@ -1,5 +1,5 @@
 <app-layout>
-  <app-products-categories />
+  <app-products-categories [categoriesByProducts]="categories" />
   <div class="main-container">
     <app-products-filters [avalaibleColors]="avalaibleColors" />
     <app-products-container [products]="products$ | async" />
