--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,6 @@ body {
   overflow-x: hidden;
   height: fit-content;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
