--- a/src/app/cms/components/login/login-form/login-form.component.html
+++ b/src/app/cms/components/login/login-form/login-form.component.html
@@ -1,14 +1,26 @@
 <main>
-  <form class="form">
+  <form class="form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <legend>Ingresa al panel de administrador</legend>
-    <mat-form-field appearance="fill"  class="example-full-width">
+    <mat-form-field appearance="fill">
       <mat-label>Correo electrónico</mat-label>
-      <input class="input" matInput type="email" placeholder="Ex. pat@example.com" />
+      <input
+        matInput
+        formControlName="email"
+        type="email"
+        placeholder="pat@example.com"
+      />
     </mat-form-field>
-    <mat-form-field appearance="fill" class="example-full-width">
+    <mat-form-field appearance="fill">
       <mat-label>Contraseña</mat-label>
-      <input matInput type="password" placeholder="**********" />
+      <input
+        matInput
+        formControlName="password"
+        type="password"
+        placeholder="**********"
+      />
     </mat-form-field>
-    <button class="button" mat-flat-button color="primary" type="submit">Ingresar</button>
+    <button class="button" mat-flat-button color="primary" type="submit">
+      Ingresar
+    </button>
   </form>
 </main>
