--- a/src/app/cms/components/login/login-form/login-form.component.scss
+++ b/src/app/cms/components/login/login-form/login-form.component.scss
@@ -17,6 +17,7 @@ main {
     align-items: center;
     border: solid 2px #3f51b5;
     border-radius: 5px;
+    gap: 6px;
 
     * {
       width: 80%;
@@ -28,6 +29,10 @@ main {
       text-align: center;
       line-height: 28px;
       color: #3f51b5;
+    }
+
+    .error {
+      height: 1000px;
     }
 
     .button {
