--- a/src/app/website/components/products/categories/categories.component.html
+++ b/src/app/website/components/products/categories/categories.component.html
@@ -1,4 +1,4 @@
-<header>
+<header *ngIf="categories.length > 0">
   <button class="control" (click)="pushCarousel()" type="button"><</button>
   <menu class="categories">
     <li
