--- a/src/app/website/components/product-detail/detail/detail.component.scss
+++ b/src/app/website/components/product-detail/detail/detail.component.scss
@@ -26,6 +26,7 @@ main {
     margin-top: -60px;
 
     .name {
+      margin-left: 20px;
       display: flex;
       flex-direction: column;
       gap: 12px;
@@ -45,6 +46,7 @@ main {
       display: flex;
       flex-direction: column;
       gap: 20px;
+      margin-left: 20px;
 
       .colors-label,
       .sizes-label {
@@ -75,6 +77,48 @@ main {
           border: 2px solid #111;
           padding: 5px;
           text-align: center;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  main {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 20px;
+
+    .img-container {
+      width: 80%;
+      margin: auto;
+
+      img {
+        height: fit-content;
+        width: 100%;
+      }
+    }
+
+    .info-container {
+      justify-content: flex-start;
+      align-items: center;
+      margin-top: 0;
+      align-self: flex-start;
+
+      .name {
+        margin-left: 0;
+      }
+
+      .features {
+        height: fit-content;
+        align-items: center;
+        justify-content: center;
+        margin-left: 0;
+
+        .colors,
+        .sizes {
+          justify-content: center;
+          width: auto;
         }
       }
     }
