--- a/src/app/website/components/products/products-container/products-container.component.scss
+++ b/src/app/website/components/products/products-container/products-container.component.scss
@@ -15,6 +15,14 @@ main {
     justify-content: center;
     align-items: center;
   }
+
+  .no-products {
+    width: 100%;
+    height: 60vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 @media (max-width: 1250px) {
@@ -30,6 +38,11 @@ main {
   main {
     .container {
       grid-template-columns: repeat(2, 1fr);
+    }
+
+    .no-products {
+      padding: 0 20px;
+      text-align: center;
     }
   }
 }
