feat: basic products table

--- a/src/app/pages/cms/components/common/navbar/navbar.component.html
+++ b/src/app/pages/cms/components/common/navbar/navbar.component.html
@@ -1,1 +1,8 @@
-<p>navbar works!</p>
+<nav class="nav">
+  <menu class="nav-items">
+    <li><a routerLinkActive="active" routerLink="">Lista de productos</a></li>
+    <li><a routerLinkActive="active" routerLink="new-product">Crear producto</a></li>
+    <li><a routerLinkActive="active" routerLink="new-category">Crear categoría</a></li>
+    <li (click)="signOff()"><a>Salir</a></li>
+  </menu>
+</nav>
