--- a/src/app/pages/website/components/product-detail/detail/detail.component.scss
+++ b/src/app/pages/website/components/product-detail/detail/detail.component.scss
@@ -35,11 +35,13 @@ main {
         color: #777;
         user-select: text;
         cursor: auto;
+        margin-top: -32px;
+        margin-bottom: 12px;
       }
-    }
 
-    .price {
-      font-size: 32px;
+      .price {
+        font-size: 32px;
+      }
     }
 
     .features {
