--- a/src/app/pages/cms/components/common/navbar/navbar.component.html
+++ b/src/app/pages/cms/components/common/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <nav class="nav">
   <menu class="nav-items">
-    <li><a routerLinkActive="active" routerLink="">Lista de productos</a></li>
-    <li><a routerLinkActive="active" routerLink="new-product">Crear producto</a></li>
-    <li><a routerLinkActive="active" routerLink="new-category">Crear categoría</a></li>
-    <li (click)="signOff()"><a>Salir</a></li>
+    <li><a routerLinkActive="active" routerLink="/cms/dashboard">Lista de productos</a></li>
+    <li><a routerLinkActive="active" routerLink="/cms/dashboard/new-product">Crear producto</a></li>
+    <li><a routerLinkActive="active" routerLink="/cms/dashboard/new-category">Crear categoría</a></li>
+    <li><a tabindex="0" (click)="signOff()">Salir</a></li>
   </menu>
 </nav>
