--- a/src/app/pages/cms/components/dashboard/products-list/products-list.component.scss
+++ b/src/app/pages/cms/components/dashboard/products-list/products-list.component.scss
@@ -1,4 +1,20 @@
 main {
   height: 100%;
   overflow-y: auto;
+
+  .edit, .delete {
+    cursor: pointer;
+  }
+
+  .edit {
+    color: #3f51b5;
+    margin-right: 12px;
+    text-decoration: none;
+  }
+
+  .delete {
+    color: red;
+    border: none;
+    background-color: transparent;
+  }
 }
