feat: better handling of products

--- a/src/app/pages/cms/components/common/navbar/navbar.component.html
+++ b/src/app/pages/cms/components/common/navbar/navbar.component.html
@@ -3,6 +3,7 @@
     <li><a routerLinkActive="active" routerLink="/cms/dashboard">Lista de productos</a></li>
     <li><a routerLinkActive="active" routerLink="/cms/dashboard/new-product">Crear producto</a></li>
     <li><a routerLinkActive="active" routerLink="/cms/dashboard/new-category">Crear categoría</a></li>
+    <li><a routerLinkActive="active" routerLink="/cms/dashboard/update-category">Modificar categoría</a></li>
     <li><a tabindex="0" (click)="signOff()">Salir</a></li>
   </menu>
 </nav>
