--- a/src/app/pages/cms/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/cms/pages/dashboard/dashboard.component.html
@@ -1,6 +1,9 @@
 <div class="layout">
   <app-navbar />
-  <div>
-    <router-outlet></router-outlet>
+  <div class="main">
+    <div class="top-bar"></div>
+    <main class="content">
+      <router-outlet></router-outlet>
+    </main>
   </div>
 </div>
