--- a/src/app/pages/cms/components/login/login-form/login-form.component.html
+++ b/src/app/pages/cms/components/login/login-form/login-form.component.html
@@ -23,6 +23,7 @@
         formControlName="password"
         type="password"
         placeholder="**********"
+        autocomplete="on"
       />
       <mat-error
       class="error"
