--- a/src/app/pages/cms/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/cms/pages/dashboard/dashboard.component.html
@@ -1,9 +1,11 @@
 <div class="layout">
-  <app-navbar />
+  <div class="nav">
+    <app-navbar />
+  </div>
   <div class="main">
     <div class="top-bar"></div>
-    <main class="content">
+    <div class="content">
       <router-outlet></router-outlet>
-    </main>
+    </div>
   </div>
 </div>
