--- a/src/app/pages/cms/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/cms/pages/dashboard/dashboard.component.scss
@@ -11,5 +11,12 @@
       height: 52px;
     }
 
+    .content {
+      width: 100%;
+      height: fit-content;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   }
 }
