--- a/src/app/pages/cms/components/dashboard/products-list/products-list.component.html
+++ b/src/app/pages/cms/components/dashboard/products-list/products-list.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="products$ | async as products">
-  <table mat-table [dataSource]="products">
+  <table class="table" mat-table [dataSource]="products">
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef>ID</th>
       <td mat-cell *matCellDef="let product">{{ product.id }}</td>
