--- a/src/app/pages/cms/components/dashboard/products-list/products-list.component.scss
+++ b/src/app/pages/cms/components/dashboard/products-list/products-list.component.scss
@@ -1,20 +1,21 @@
-table {
+.table {
   width: 100%;
-}
+  table-layout: fixed;
 
-.edit,
-.delete {
-  cursor: pointer;
-}
+  .edit,
+  .delete {
+    cursor: pointer;
+  }
 
-.edit {
-  color: #3f51b5;
-  margin-right: 12px;
-  text-decoration: none;
-}
+  .edit {
+    color: #3f51b5;
+    margin-right: 12px;
+    text-decoration: none;
+  }
 
-.delete {
-  color: red;
-  border: none;
-  background-color: transparent;
+  .delete {
+    color: red;
+    border: none;
+    background-color: transparent;
+  }
 }
