--- a/src/app/pages/cms/components/common/colors-picker/colors-picker.component.scss
+++ b/src/app/pages/cms/components/common/colors-picker/colors-picker.component.scss
@@ -9,11 +9,21 @@
     padding: 40px;
     margin-bottom: 20px;
     position: absolute;
-    top: 120px;
+    top: 100px;
   }
 
   .input {
     width: 300px;
     height: 80px;
+  }
+}
+
+@media (max-width: 1075px) {
+  .color-picker {
+    .badges {
+      justify-content: center;
+      width: 300px;
+      padding: 40px 6px;
+    }
   }
 }
