--- a/src/app/pages/cms/components/dashboard/update-product/update-product.component.scss
+++ b/src/app/pages/cms/components/dashboard/update-product/update-product.component.scss
@@ -9,6 +9,8 @@ main {
     font-size: 32px;
     margin-bottom: 40px;
     font-weight: bold;
+    padding: 0 32px;
+    text-align: center;
   }
 
   form {
@@ -37,6 +39,30 @@ main {
     .submit-button {
       width: 90%;
       height: 40px;
+    }
+  }
+}
+
+@media (max-width: 1075px) {
+  main {
+    min-height: 90vh;
+    padding: 40px 0;
+    form {
+      width: 100%;
+
+      .group {
+        display: flex;
+        flex-direction: column;
+        gap: 6px;
+      }
+
+      .third {
+        flex-direction: column-reverse;
+      }
+
+      .submit-button {
+        width: 300px;
+      }
     }
   }
 }
