--- a/src/app/pages/cms/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/cms/pages/dashboard/dashboard.component.scss
@@ -20,3 +20,16 @@
     }
   }
 }
+
+@media (max-width: 1075px) {
+  .layout {
+    grid-template-columns: 1fr;
+    grid-auto-rows: auto;
+
+    .main {
+      .top-bar {
+        display: none;
+      }
+    }
+  }
+}
