feat: create category

--- a/src/app/pages/cms/components/common/navbar/navbar.component.html
+++ b/src/app/pages/cms/components/common/navbar/navbar.component.html
@@ -21,6 +21,11 @@
           >Modificar categoría</a
         >
       </li>
+      <li>
+        <a routerLinkActive="active" routerLink="/cms/dashboard/update-category"
+          >Eliminar categoría</a
+        >
+      </li>
       <li><a tabindex="0" (click)="signOff()">Salir</a></li>
     </menu>
   </nav>
@@ -47,6 +52,11 @@
       <li>
         <a routerLinkActive="active" routerLink="/cms/dashboard/update-category"
           >Modificar categoría</a
+        >
+      </li>
+      <li>
+        <a routerLinkActive="active" routerLink="/cms/dashboard/update-category"
+          >Eliminar categoría</a
         >
       </li>
       <li><a tabindex="0" (click)="signOff()">Salir</a></li>
