feat: delete category basic ready

--- a/src/app/pages/cms/components/dashboard/new-category/new-category.component.html
+++ b/src/app/pages/cms/components/dashboard/new-category/new-category.component.html
@@ -1,5 +1,5 @@
 <main>
-  <h1>Crea una categoría</h1>
+  <h1>Crear categoría</h1>
   <form [formGroup]="form" (submit)="onSubmit()">
     <div class="group category">
       <mat-form-field class="type-input" appearance="fill">
