--- a/src/app/pages/cms/components/dashboard/update-category/update-category.component.html
+++ b/src/app/pages/cms/components/dashboard/update-category/update-category.component.html
@@ -1,5 +1,5 @@
 <main>
-  <h1>Crea una categoría</h1>
+  <h1>Modificar categoría</h1>
   <form [formGroup]="form" (submit)="onSubmit()">
     <div class="group">
       <mat-form-field class="input" appearance="fill">
@@ -33,6 +33,6 @@
         <input matInput formControlName="img" />
       </mat-form-field>
     </div>
-    <button type="submit" mat-flat-button color="primary">Crear</button>
+    <button type="submit" mat-flat-button color="primary">Modificar</button>
   </form>
 </main>
