feat: ngOptimizedImage implemented in products list

--- a/src/app/pages/cms/components/dashboard/delete-category/delete-category.component.html
+++ b/src/app/pages/cms/components/dashboard/delete-category/delete-category.component.html
@@ -2,7 +2,7 @@
   <h1>Eliminar categoría</h1>
   <div>
     <mat-form-field class="input" appearance="fill">
-      <mat-label>Tipo</mat-label>
+      <mat-label>Categoría</mat-label>
       <mat-select
         *ngIf="categories$ | async as categories"
         [formControl]="targetCategory"
