--- a/src/app/pages/website/components/common/navbar/navbar.component.scss
+++ b/src/app/pages/website/components/common/navbar/navbar.component.scss
@@ -7,10 +7,10 @@
   }
 
   .navbar-extended {
-    padding: 20px 0;
+    padding: 6px 0;
     display: grid;
     grid-template-columns: 2fr 10fr;
-    border-bottom: 2px solid #efefef;
+    border-bottom: 1px solid #efefef;
     align-items: center;
 
     .logo {
@@ -64,19 +64,23 @@
 
 @media (max-width: 650px) {
   .navbar {
+    height: 68px;
+    position: relative;
     .navbar-extended {
       display: none;
     }
 
     .navbar-collapse {
       display: block;
-      border-bottom: 2px solid #efefef;
+      border-bottom: 1px solid #efefef;
 
       .bar {
+        position: fixed;
+        background-color: #fff;
         width: 100%;
         display: flex;
         justify-content: space-between;
-        padding: 10px 24px;
+        padding: 0 24px;
 
         a {
           text-decoration: none;
@@ -97,12 +101,13 @@
         z-index: 100;
         animation: slide-in 1s ease;
         background-color: #fff;
-        position: absolute;
+        position: fixed;
         display: flex;
         flex-direction: column;
         align-items: center;
         width: 100%;
         height: 95vh;
+        top: 68px;
 
         menu {
           list-style: none;
