--- a/src/app/pages/website/components/products/product-miniature/product-miniature.component.html
+++ b/src/app/pages/website/components/products/product-miniature/product-miniature.component.html
@@ -1,5 +1,11 @@
 <li *ngIf="product" class="miniature" tabindex="0" [routerLink]="product.id">
-  <img [src]="product.img" [alt]="product.name" />
+  <img
+    [ngSrc]="product.img"
+    width="300"
+    height="400"
+    [alt]="product.name"
+    priority
+  />
   <div>
     <span class="name">{{ product.name | uppercase }}</span>
     <span>{{ product.price | currencyFormat }}</span>
